k8s/apps/streaming/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
    spec:
      serviceAccountName: prowlarr
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:v3.4.6
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8191
            protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:2.3.0
        volumeMounts:
          - mountPath: /config
            name: prowlarr-config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
