k8s/apps/streaming/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9696
      targetPort: http
  type: ClusterIP
