k8s/apps/streaming/prowlarr/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  parentRefs:
  - name: internal
    namespace: gateway
  hostnames:
  - prowlarr.lab.schaermu.ch
  rules:
  - backendRefs:
    - name: prowlarr
      port: 9696
    matches:
    - path:
        type: PathPrefix
        value: /
